adjust code padding to prevent overlap

--- a/css/partials/bootstrap.scss
+++ b/css/partials/bootstrap.scss
@@ -883,7 +883,7 @@ $close-text-shadow:           0 1px 0 $white !default;
 
 $code-font-size:              15px !default;
 $code-padding-x:              .4rem !default;
-$code-padding-y:              .2rem !default;
+$code-padding-y:              .1rem !default;
 $code-color:                  $brand-primary !default;
 $code-bg:                     #FFF6EA !default;
 
